Don't clip tool bar border if active tab is invisible

Bug: 651022
Change-Id: I95d405ca9be1747abfe24f68f0837ed5981571ed
Reviewed-on: https://chromium-review.googlesource.com/958783
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542556}
Former-commit-id: c876f4a1c3d5cf0a8ef48f3ac18fcf2406633fb4